2010-03-08  Brady Eidson  <beidson@apple.com>

        Reviewed by NOBODY (but suggested by Steve Falkenburg and fixing a boneheaded mistake on my part last week)

        Followup to https://bugs.webkit.org/show_bug.cgi?id=35532

        * DumpRenderTree/win/LayoutTestControllerWin.cpp:
        (LayoutTestController::apiTestGoToCurrentBackForwardItem): Can't pass in a null BOOL to WebKit APIs.

2010-03-08  Chris Jerdonek  <cjerdonek@webkit.org>

        Unreviewed.

        Fixed incorrect import statement in validate-committer-lists:
        webkitpy.BeautifulSoup -> webkitpy.thirdparty.BeautifulSoup.

        * Scripts/validate-committer-lists:

2010-03-08  Jian Li  <jianli@chromium.org>

        Reviewed by Dmitry Titov.

        Blob.slice support.
        https://bugs.webkit.org/show_bug.cgi?id=32993

        Add ENABLE_BLOB_SLICE feature define and  flag for build-webkit. It is
        currently only turned on for Mac.

        * Scripts/build-webkit:

2010-03-08  Gustavo Noronha Silva  <gns@gnome.org>

        No review, rolling out r55662.
        http://trac.webkit.org/changeset/55662
        https://bugs.webkit.org/show_bug.cgi?id=35863

        Need to be coordinated with bots setup

        * Scripts/run-webkit-tests:

2010-03-08  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>

        Reviewed by Holger Freyther.

        [GTK] Tests fail when running with ipv6 addresses available, on Debian systems
        https://bugs.webkit.org/show_bug.cgi?id=35863

        If running on a Debian-based system, also listen on the ipv6 address.

        * Scripts/run-webkit-tests:

2010-03-08  Holger Hans Peter Freyther  <zecke@selfish.org>

        Reviewed by Darin Adler.

        [iexploder] Automatically update htmltags.in and htmlattrs.in too
        https://bugs.webkit.org/show_bug.cgi?id=33755

        Change the update-iexploder-cssproperites script to update
        the htmlattrs.in and htmltags.in of WebKitTools/iExploder/htdocs